# AstralRenderer

./: .gitignore  CMakeLists.txt  README.md  build_fbx.txt  build_lib.txt  build_log.txt  build_output.txt  cmake-config.cmake.in  compile_shaders.py  config.json  current_status.md  debug_build.py  fbx_test_stdout.txt  future_roadmap.md  imgui.ini  material_refactor_roadmap.md  material_system_analysis.md  roadmap_06.01.md  walkthrough.md
.agent/skills/astral_renderer/: SKILL.md
.agent/skills/modern_cpp/: SKILL.md
.agent/skills/vulkan/: SKILL.md
assets/models/m1897-trenchgun/source/: trenchgun.fbx
assets/shaders/: bloom.frag  bloom.frag.spv  brdf_lut.comp.spv  cluster_build.comp  cluster_build.comp.spv  cluster_cull.comp  cluster_cull.comp.spv  composite.frag  composite.frag.spv  cull.comp  cull.comp.spv  equirect_to_cube.comp.spv  fxaa.frag  fxaa.frag.spv  irradiance.comp  irradiance.comp.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  prefilter.comp  prefilter.comp.spv  shadow.vert  shadow.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  ssao.frag  ssao.frag.spv  ssao_blur.frag  taa.frag  taa.frag.spv
cmake/: compiler.cmake  dependencies.cmake  install-config.cmake
docs/: ARCHITECTURE.md  FEATURES.md  FUTURE_PLANS.md  RENDERING_PIPELINE.md
examples/: fbx_viewer.cpp  gltf_viewer.cpp  model_viewer.hpp
include/astral/: application.hpp
include/astral/core/: config.hpp  performance_monitor.hpp
include/astral/renderer/: asset_manager.hpp  assimp_loader.hpp  camera.hpp  descriptor_manager.hpp  gltf_loader.hpp  material.hpp  model.hpp  pipeline.hpp  renderer_system.hpp  scene_data.hpp  scene_manager.hpp  sync.hpp  ui_manager.hpp
include/astral/resources/: image.hpp  sampler.hpp
src/: application.cpp  main.cpp
src/core/: config.cpp  context.cpp  performance_monitor.cpp
src/renderer/: asset_manager.cpp  assimp_loader.cpp  descriptor_manager.cpp  environment_manager.cpp  gltf_loader.cpp  pipeline.cpp  render_graph.cpp  renderer_system.cpp  scene_manager.cpp  swapchain.cpp  ui_manager.cpp
src/resources/: image.cpp  sampler.cpp  shader.cpp
